# C_learn

./: .gitignore  CMakeLists.txt  README.md  library.h
1 start/: code1.c  code2.c
2 variable/: code3.c  code4.c  code5.c  code6.c  code7.c
3 Operator/: OP - 01.c  OP-02.c  OP-03.c  OP-04.c  OP-05.c  OP-06.c
4 type/: TY-01.c  TY-02.c
5 if/: IF-01.c  IF_else-01.c  bool-01.c  bool-02.c  bool-03.c  if-02.c
6 loop/: break-01.c  continue-01.c  do-while-01.c  for-01.c  for-02.c  for-03.c  while-01.c
7 switch/: switch-01.c
8 type casting/: TC-01.c  TC-02.c
9 array/: array-01.c  array-02.c  array-03.c  array-04.c  array-05.c  array-6.c
