cmake_minimum_required(VERSION 3.30)
project(C_learn C)

set(CMAKE_C_STANDARD 11)

add_library(C_learn STATIC library.c
        "1 start/code1.c"
        "1 start/code2.c"
        "2 variable/code3.c"
        "2 variable/code4.c"
        "2 variable/code5.c"
        "2 variable/code6.c"
        "2 variable/code7.c"
        "3 Operator/OP - 01.c"
        "3 Operator/OP-02.c"
        "3 Operator/OP-03.c"
        "3 Operator/OP-04.c"
        "3 Operator/OP-05.c"
        "3 Operator/OP-06.c"
        "4 type/TY-01.c"
        "4 type/TY-02.c"
        "5 if/IF-01.c"
        "5 if/if-02.c"
        "5 if/IF_else-01.c"

        "5 if/bool-01.c"
        "5 if/bool-02.c"
        "5 if/bool-03.c"
        "6 loop/for-01.c"
        "6 loop/for-02.c"
        "6 loop/for-03.c"
        "6 loop/break-01.c"
        "6 loop/continue-01.c"
        "6 loop/while-01.c"
        "6 loop/do-while-01.c"
        "7 switch/switch-01.c"
        "7 switch/switch-01.c"
        "7 switch/switch-01.c"
        "8 type casting/TC-01.c"
        "8 type casting/TC-02.c"
        "9 array/array-01.c"
        "9 array/array-02.c"
        "9 array/array-03.c"
        "9 array/array-04.c"
        "9 array/array-05.c"
        "9 array/array-6.c"
)
